# ct-properties

./: .gitignore  pyproject.toml
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: scrape_vgsi.py  test.py
airflow/dags/vgsi/: vgsi_objects.py  vgsi_utils.py
scripts/: docker_setup.sh
terraform/: bigquery.tf  main.tf  output.tf  provider.tf  serviceaccount.tf  variables.tf
