[project]
name = "ct-properties"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Preising"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pytz (>=2025.2,<2026.0)",
    "six (>=1.17.0,<2.0.0)",
    "time-machine (>=2.19.0,<3.0.0)",
    "tzdata (>=2025.2,<2026.0)",
    "apache-airflow (>=3.0.6,<4.0.0)",
    "google-cloud (>=0.34.0,<0.35.0)",
    "bs4 (>=0.0.2,<0.0.3)",
    "apache-airflow-providers-google (>=17.1.0,<18.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
