[tool.poetry]
package-mode = false
[project]
name = "ct-properties"
version = "0.1.0"
description = ""
authors = [
    {name = "Carlos Preising"}
]
readme = "README.md"
requires-python = ">3.12, <3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "bs4 (>=0.0.2,<0.0.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
